# TimeTableS

./: settings.txt  simple.cabal  stack.yaml
app/: Main.hs  settings.txt
src/: Lib.hs
src/TimeTableS/: Date.hs  LoadFromServer.hs  SelectGroup.hs  Settings.hs  Types.hs  Utils.hs
