name:                simple
version:             0.0.0.1
synopsis:            NURE TimeTable Haskell API
description:         NURE TimeTable Haskell API
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Nikita Yurchenko
maintainer:          nic.yurchenko@gmail.com
copyright:           2017 Nikita Yurchenko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , TimeTableS.Types
                       , TimeTableS.Settings
                       , TimeTableS.Utils
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , text
                       , http-conduit
                       , bytestring
                       , split
  default-language:    Haskell2010


executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , text
                     , http-conduit
                     , bytestring
                     , simple
                     , split
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinskiy/TimeTableS
